plugins {
	id 'fabric-loom' version '1.10-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}
repositories {
	maven { url 'https://maven.fabricmc.net' }
	maven { url 'https://maven.kyrptonaught.dev/' }
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.terraformersmc.com/releases/" }
	//maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")

	modApi "blue.endless:jankson:1.2.3"
	include "blue.endless:jankson:1.2.3"

	//modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.1")

	//modImplementation 'net.kyrptonaught:kyrptconfig:1.2.2-1.17'
	//include 'net.kyrptonaught:kyrptconfig:1.2.2-1.17'
}

loom {
	accessWidenerPath = file("src/main/resources/quickshulker.accesswidener")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}


tasks.withType(JavaCompile).configureEach {
	it.options.release = 8
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

jar {
	from "LICENSE"
}

// configure the maven publication
publishing {
	//publications {
	//	QuickshulkerPublication(MavenPublication) {
	//		groupId 'net.kyrptonaught'
	//		artifactId 'quickshulker'
	//		version project.version

	//		artifact(remapJar) {
	//			builtBy remapJar
	//		}
	//		artifact(sourcesJar) {
	//			builtBy remapSourcesJar
	//		}
	//	}
	//}

	//repositories {
	//	 mavenLocal()
	//}
}
